--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BALL_DONT_LIE_API_KEY="d32782e5-a935-4030-935e-12e1fa32c686"
-DB_SERVER_NAME="YOUR_SERVER_NAME"
-DB_NAME="YOUR_DATABASE_NAME"
-DB_USERNAME="YOUR_USERNAME"
-DB_PASSWORD="YOUR_PASSWORD"
-PORT=YOUR_PORT
+DB_SERVER_NAME="postgress"
+DB_NAME="nba_pipeline"
+DB_USERNAME="postgress"
+DB_PASSWORD="postgress"
+PORT=5432
