--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ DB_USERNAME="postgres"
 DB_PASSWORD="postgres"
 PORT=5432
 ENV="dev"
-MODE="increment"
+AWS_ACCESS_KEY_ID="AKIAWNISAOJNVIXHJHPR"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_DEFAULT_REGION="us-east-1"
