--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+BALL_DONT_LIE_API_KEY=""
+DB_SERVER_NAME="localhost"
+DB_NAME="nba_pipeline"
+DB_USERNAME="postgres"
+DB_PASSWORD="postgres"
+PORT=5432
+ENV="dev"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_DEFAULT_REGION=""
 
